# mangosbot

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  TODO  VERSION  ability-matrix.ods  command-matrix.ods  config.h  configure.ac  index.html
src/game/: AchievementMgr.cpp  Action.cpp  Action.h  ActionBasket.cpp  ActionBasket.h  ActionFactory.cpp  ActionFactory.h  AiAction.cpp  AiAction.h  AiActionBasket.cpp  AiActionBasket.h  AiFactory.cpp  AiFactory.h  AiGroupStatsManager.cpp  AiGroupStatsManager.h  AiInventoryManager.cpp  AiInventoryManager.h  AiManagerBase.cpp  AiManagerBase.h  AiManagerRegistry.cpp  AiManagerRegistry.h  AiManagerRegistryAware.h  AiMoveManager.cpp  AiMoveManager.h  AiQuestManager.cpp  AiQuestManager.h  AiQueue.cpp  AiQueue.h  AiSocialManager.cpp  AiSocialManager.h  AiSpellManager.cpp  AiSpellManager.h  AiStatsManager.cpp  AiStatsManager.h  AiStrategyManager.cpp  AiStrategyManager.h  AiTargetManager.cpp  AiTargetManager.h  AuctionHouseBot.cpp  AuctionHouseBot.h  (+230 more)
src/game/Chat/: Chat.cpp  Chat.h  ChatHandler.cpp  Level1.cpp  Level2.cpp  Level3.cpp
src/game/Combat/: ThreatManager.cpp
src/game/DBScripts/: ScriptMgr.cpp
src/game/Entities/: CharacterHandler.cpp  Creature.cpp  Creature.h  GameObject.cpp  GossipDef.h  Item.cpp  Object.cpp  Pet.cpp  Player.cpp  Player.h  Unit.cpp
src/game/Globals/: SharedDefines.h
src/game/Groups/: Group.cpp  Group.h
src/game/Loot/: LootMgr.cpp
src/game/Maps/: Map.cpp
src/game/MotionGenerators/: TargetedMovementGenerator.cpp
src/game/Object/: Creature.cpp  GameObject.cpp  Item.cpp  Player.cpp  Player.h  ReputationMgr.cpp  Unit.cpp
src/game/Quests/: QuestHandler.cpp
src/game/Reputation/: ReputationMgr.cpp
src/game/Server/: DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  WorldSession.cpp  WorldSession.h
src/game/Social/: SocialMgr.cpp
src/game/Spells/: SpellHandler.cpp  SpellTargets.cpp
src/game/Tools/: Formulas.h
src/game/World/: World.cpp
src/game/WorldHandlers/: CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  GossipDef.h  Group.h  Map.cpp  Spell.cpp  World.cpp  World.h
src/game/ahbot/: AhBot.cpp  AhBot.h  AhBotConfig.cpp  AhBotConfig.h  Category.cpp  Category.h  ConsumableCategory.h  ItemBag.cpp  PricingStrategy.cpp  PricingStrategy.h  TradeCategory.h  ahbot.conf.dist.in
src/game/playerbot/: AiFactory.cpp  AiFactory.h  ChatFilter.cpp  ChatHelper.cpp  ChatHelper.h  FleeManager.cpp  FleeManager.h  LootObjectStack.cpp  LootObjectStack.h  PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIBase.cpp  PlayerbotAIBase.h  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotFactory.cpp  PlayerbotFactory.h  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotSecurity.cpp  PlayerbotSecurity.h  RandomPlayerbotFactory.cpp  RandomPlayerbotFactory.h  RandomPlayerbotMgr.cpp  RandomPlayerbotMgr.h  aiplayerbot.conf.dist.in  playerbot.h  playerbotDefs.h
src/game/playerbot/ai/: AiFactory.cpp  AiFactory.h  AiGroupStatsManager.cpp  AiGroupStatsManager.h  AiInventoryManager.cpp  AiInventoryManager.h  AiManagerBase.cpp  AiManagerBase.h  AiManagerRegistry.cpp  AiManagerRegistry.h  AiManagerRegistryAware.h  AiManagers.h  AiMoveManager.cpp  AiMoveManager.h  AiQuestManager.cpp  AiQuestManager.h  AiSocialManager.cpp  AiSocialManager.h  AiSpellManager.cpp  AiSpellManager.h  AiStatsManager.cpp  AiStatsManager.h  AiStrategyManager.cpp  AiStrategyManager.h  AiTargetManager.cpp  AiTargetManager.h  AttackerMapProvider.cpp  AttackerMapProvider.h  FindTargetStrategy.cpp  FindTargetStrategy.h  FleeManager.cpp  FleeManager.h  LootManager.cpp  LootManager.h  LootObjectStack.cpp  LootObjectStack.h
src/game/playerbot/strategy/: Action.cpp  Action.h  ActionFactory.cpp  ActionFactory.h  AiObject.cpp  AiObject.h  AiObjectContext.h  ChooseTargetActions.h  CureTriggers.cpp  CureTriggers.h  Engine.cpp  Engine.h  Event.h  ExternalEventHelper.h  GenericActions.cpp  GenericActions.h  GenericNonCombatStrategy.cpp  GenericNonCombatStrategy.h  GenericSpellActions.cpp  GenericSpellActions.h  GenericTriggers.cpp  GenericTriggers.h  HealthTriggers.cpp  HealthTriggers.h  ItemVisitors.h  LowManaMultiplier.cpp  Multiplier.h  NamedObjectContext.h  NonCombatActions.cpp  NonCombatActions.h  PassiveMultiplier.cpp  PassiveMultiplier.h  PullStrategy.cpp  PullStrategy.h  Queue.cpp  RacialsStrategy.cpp  RangeTriggers.h  ReachTargetActions.h  Strategy.cpp  Strategy.h  (+4 more)
src/game/playerbot/strategy/actions/: AcceptDuelAction.h  AcceptInvitationAction.h  AcceptQuestAction.cpp  AcceptResurrectAction.h  ActionContext.h  AddLootAction.cpp  AddLootAction.h  AreaTriggerAction.cpp  AttackAction.cpp  AttackAction.h  BankAction.cpp  BuyAction.cpp  CastCustomSpellAction.cpp  ChangeStrategyAction.cpp  ChatActionContext.h  ChatShortcutActions.cpp  ChatShortcutActions.h  CheckMountStateAction.cpp  CheckMountStateAction.h  ChooseTargetActions.h  DestroyItemAction.cpp  DropQuestAction.cpp  EmoteAction.cpp  EquipAction.cpp  FollowActions.cpp  FollowActions.h  GenericSpellActions.h  GossipHelloAction.cpp  InventoryAction.cpp  InventoryChangeFailureAction.cpp  InviteToGroupAction.h  LeaveGroupAction.h  LfgActions.cpp  LfgActions.h  LfgUpdateAction.cpp  LfgUpdateAction.h  ListSpellsAction.cpp  LogLevelAction.cpp  LootAction.cpp  LootAction.h  (+41 more)
src/game/playerbot/strategy/druid/: BearTankDruidStrategy.cpp  BearTankDruidStrategy.h  CasterDruidStrategy.cpp  CasterDruidStrategy.h  CatDpsDruidStrategy.cpp  CatDpsDruidStrategy.h  DruidActionFactory.cpp  DruidActionFactory.h  DruidActions.cpp  DruidActions.h  DruidAiObjectContext.cpp  DruidBearActions.h  DruidCatActions.h  DruidShapeshiftActions.h  DruidTriggers.h  FeralDruidStrategy.cpp  FeralDruidStrategy.h  GenericDruidNonCombatStrategy.cpp  GenericDruidNonCombatStrategy.h  GenericDruidStrategy.cpp  GenericDruidStrategy.h  HealDruidStrategy.h
src/game/playerbot/strategy/generic/: CastTimeStrategy.cpp  ChatCommandHandlerStrategy.cpp  CombatStrategy.cpp  CombatStrategy.h  ConserveManaStrategy.cpp  ConserveManaStrategy.h  DpsAoeStrategy.h  DpsAssistStrategy.h  DuelStrategy.cpp  FollowLineStrategy.cpp  FollowLineStrategy.h  (+23 more)
(+528 files in other folders)
