# Copyright (C) 2005-2011 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse
SUBDIRS = vmap

## CPP flags for includes, defines, etc.
AM_CPPFLAGS = $(MANGOS_INCLUDES) -I$(top_builddir)/src/shared -I$(srcdir) -I$(srcdir)/../../dep/include -I$(srcdir)/../framework -I$(srcdir)/../shared -I$(srcdir)/vmap -I$(srcdir)/../realmd -I$(srcdir)/../../dep/include/g3dlite -DSYSCONFDIR=\"$(sysconfdir)/\"

## Build MaNGOS game library as convenience library.
#  All libraries will be convenience libraries. Might be changed to shared
#  later.
noinst_LIBRARIES = libmangosgame.a

#  libmangossgame library will later be reused by ...
libmangosgame_a_SOURCES = \
	AccountMgr.cpp \
	AccountMgr.h \
	AchievementMgr.h \
	AchievementMgr.cpp \
	AggressorAI.cpp \
	AggressorAI.h \
	ArenaTeam.cpp \
	ArenaTeam.h \
	ArenaTeamHandler.cpp \
	AuctionHouseBot.cpp \
	AuctionHouseBot.h \
	AuctionHouseHandler.cpp \
	AuctionHouseMgr.cpp \
	AuctionHouseMgr.h \
	Bag.cpp \
	Bag.h \
	BattleGround.cpp \
	BattleGroundAA.cpp \
	BattleGroundAB.cpp \
	BattleGroundRB.cpp \
	BattleGroundAV.cpp \
	BattleGroundBE.cpp \
	BattleGroundDS.cpp \
	BattleGroundEY.cpp \
	BattleGroundIC.cpp \
	BattleGroundNA.cpp \
	BattleGroundRL.cpp \
	BattleGroundRV.cpp \
	BattleGroundSA.cpp \
	BattleGroundWS.cpp \
	BattleGround.h \
	BattleGroundAA.h \
	BattleGroundAB.h \
	BattleGroundRB.h \
	BattleGroundAV.h \
	BattleGroundBE.h \
	BattleGroundDS.h \
	BattleGroundEY.h \
	BattleGroundIC.h \
	BattleGroundNA.h \
	BattleGroundRL.h \
	BattleGroundRV.h \
	BattleGroundSA.h \
	BattleGroundWS.h \
	BattleGroundHandler.cpp \
	BattleGroundMgr.cpp \
	BattleGroundMgr.h \
	Calendar.cpp \
	Calendar.h \
	CalendarHandler.cpp \
	Camera.cpp \
	Camera.h \
	Cell.h \
	CellImpl.h \
	Channel.cpp \
	Channel.h \
	ChannelHandler.cpp \
	ChannelMgr.cpp \
	ChannelMgr.h \
	CharacterDatabaseCleaner.cpp \
	CharacterDatabaseCleaner.h \
	CharacterHandler.cpp \
	Chat.cpp \
	Chat.h \
	ChatHandler.cpp \
	CombatHandler.cpp \
	ConfusedMovementGenerator.cpp \
	ConfusedMovementGenerator.h \
	Corpse.cpp \
	Corpse.h \
	CreatureAI.cpp \
	CreatureAI.h \
	CreatureAIImpl.h \
	CreatureAIRegistry.cpp \
	CreatureAIRegistry.h \
	CreatureAISelector.cpp \
	CreatureAISelector.h \
	CreatureEventAI.cpp \
	CreatureEventAI.h \
	CreatureEventAIMgr.cpp \
	CreatureEventAIMgr.h \
	Creature.cpp \
	Creature.h \
	DBCEnums.h \
	DBCfmt.h \
	DBCStores.cpp \
	DBCStores.h \
	DBCStructure.h	\
	debugcmds.cpp \
	DestinationHolder.cpp \
	DestinationHolder.h \
	DestinationHolderImp.h \
	DuelHandler.cpp \
	DynamicObject.cpp \
	DynamicObject.h \
	FleeingMovementGenerator.cpp \
	FleeingMovementGenerator.h \
	Formulas.h \
	GameEventMgr.cpp \
	GameEventMgr.h \
	GameObject.cpp \
	GameObject.h \
	GMTicketHandler.cpp \
	GMTicketMgr.cpp \
	GMTicketMgr.h \
	GossipDef.cpp \
	GossipDef.h \
	GridDefines.h \
	GridMap.cpp \
	GridMap.h \
	GridNotifiers.cpp \
	GridNotifiers.h \
	GridNotifiersImpl.h \
	GridStates.cpp \
	GridStates.h \
	Group.cpp \
	Group.h \
	GroupHandler.cpp \
	GuardAI.cpp \
	GuardAI.h \
	Guild.cpp \
	Guild.h \
	GuildHandler.cpp \
	HomeMovementGenerator.cpp \
	HomeMovementGenerator.h \
	HostileRefManager.cpp \
	HostileRefManager.h \
	IdleMovementGenerator.cpp \
	IdleMovementGenerator.h \
	InstanceData.cpp \
	InstanceData.h \
	InstanceSaveMgr.cpp \
	InstanceSaveMgr.h \
	Item.cpp \
	Item.h \
	ItemEnchantmentMgr.cpp \
	ItemEnchantmentMgr.h \
	ItemHandler.cpp \
	ItemPrototype.h \
	Language.h \
	Level0.cpp \
	Level1.cpp \
	Level2.cpp \
	Level3.cpp \
	LFGHandler.cpp \
	LootHandler.cpp \
	LootMgr.cpp \
	LootMgr.h \
	Mail.cpp \
	Mail.h \
	Map.cpp \
	Map.h \
	MapManager.cpp \
	MapManager.h \
	MapReference.h \
	MapRefManager.h \
	MiscHandler.cpp \
	MotionMaster.cpp \
	MotionMaster.h \
	MovementGenerator.cpp \
	MovementGenerator.h \
	MovementGeneratorImpl.h \
	MovementHandler.cpp \
	NPCHandler.cpp \
	NPCHandler.h \
	NullCreatureAI.cpp \
	NullCreatureAI.h \
	ObjectAccessor.cpp \
	ObjectAccessor.h \
	Object.cpp \
	ObjectGuid.cpp \
	ObjectGuid.h \
	ObjectGridLoader.cpp \
	ObjectGridLoader.h \
	Object.h \
	ObjectMgr.cpp \
	ObjectMgr.h \
	ObjectPosSelector.cpp \
	ObjectPosSelector.h \
	Opcodes.cpp \
	Opcodes.h \
	Path.h \
	PetAI.cpp \
	PetAI.h \
	Pet.cpp \
	Pet.h \
	PetHandler.cpp \
	PetitionsHandler.cpp \
	Player.cpp \
	Player.h \
	PlayerDump.cpp \
	PlayerDump.h \
	PointMovementGenerator.cpp \
	PointMovementGenerator.h \
	PoolManager.cpp \
	PoolManager.h \
	QueryHandler.cpp \
	QuestDef.cpp \
	QuestDef.h \
	QuestHandler.cpp \
	RandomMovementGenerator.cpp \
	RandomMovementGenerator.h \
	ReactorAI.cpp \
	ReactorAI.h \
	ReputationMgr.cpp \
	ReputationMgr.h \
	ScriptMgr.cpp \
	ScriptMgr.h \
	SharedDefines.h \
	SkillHandler.cpp \
	SpellAuraDefines.h \
	SpellAuras.cpp \
	SpellAuras.h \
	Spell.cpp \
	SpellEffects.cpp \
	Spell.h \
	SkillDiscovery.cpp \
	SkillDiscovery.h \
	SkillExtraItems.cpp \
	SkillExtraItems.h \
	SpellHandler.cpp \
	SocialMgr.cpp \
	SocialMgr.h \
	SpellMgr.cpp \
	SpellMgr.h \
	SQLStorages.cpp \
	SQLStorages.h \
	StatSystem.cpp \
	TargetedMovementGenerator.cpp \
	TargetedMovementGenerator.h \
	TaxiHandler.cpp \
	TemporarySummon.cpp \
	TemporarySummon.h \
	TotemAI.cpp \
	TotemAI.h \
	Totem.cpp \
	Totem.h \
	TradeHandler.cpp \
	Transports.cpp \
	Transports.h \
	ThreatManager.cpp \
	ThreatManager.h \
	Traveller.h \
	Unit.cpp \
	Unit.h \
	UnitAuraProcHandler.cpp \
	UnitEvents.h \
	UpdateData.cpp \
	UpdateData.h \
	UpdateFields.h \
	UpdateMask.h \
	Vehicle.cpp \
	Vehicle.h \
	VoiceChatHandler.cpp \
	WaypointManager.cpp \
	WaypointManager.h \
	WaypointMovementGenerator.cpp \
	WaypointMovementGenerator.h \
	Weather.cpp \
	Weather.h \
	World.cpp \
	World.h \
	WorldSession.cpp \
	WorldSession.h \
	WorldSocket.cpp \
	WorldSocket.h \
	WorldSocketMgr.cpp \
	WorldSocketMgr.h \
	FollowerReference.cpp \
	FollowerReference.h \
	FollowerRefManager.h \
	GroupReference.cpp \
	GroupReference.h \
	GroupRefManager.h \
	playerbot/playerbot.h \
	playerbot/PlayerbotAIBase.cpp \
	playerbot/PlayerbotAIBase.h \
	playerbot/PlayerbotAI.cpp \
	playerbot/PlayerbotAI.h \
	playerbot/PlayerbotMgr.cpp \
	playerbot/PlayerbotMgr.h \
	playerbot/ai/AiFactory.cpp \
	playerbot/ai/AiFactory.h \
	playerbot/ai/AiGroupStatsManager.cpp \
	playerbot/ai/AiGroupStatsManager.h \
	playerbot/ai/AiInventoryManager.cpp \
	playerbot/ai/AiInventoryManager.h \
	playerbot/ai/AiManagerBase.cpp \
	playerbot/ai/AiManagerBase.h \
	playerbot/ai/AiManagerRegistryAware.h \
	playerbot/ai/AiManagerRegistry.cpp \
	playerbot/ai/AiManagerRegistry.h \
	playerbot/ai/AiManagers.h \
	playerbot/ai/AiMoveManager.cpp \
	playerbot/ai/AiMoveManager.h \
	playerbot/ai/AiQuestManager.cpp \
	playerbot/ai/AiQuestManager.h \
	playerbot/ai/AiSocialManager.cpp \
	playerbot/ai/AiSocialManager.h \
	playerbot/ai/AiSpellManager.cpp \
	playerbot/ai/AiSpellManager.h \
	playerbot/ai/AiStatsManager.cpp \
	playerbot/ai/AiStatsManager.h \
	playerbot/ai/AiStrategyManager.cpp \
	playerbot/ai/AiStrategyManager.h \
	playerbot/ai/AiTargetManager.cpp \
	playerbot/ai/AiTargetManager.h \
	playerbot/ai/AttackerMapProvider.cpp \
	playerbot/ai/AttackerMapProvider.h \
	playerbot/ai/FindTargetStrategy.cpp \
	playerbot/ai/FindTargetStrategy.h \
	playerbot/ai/FleeManager.cpp \
	playerbot/ai/FleeManager.h \
	playerbot/ai/LazyCalculatedValue.h \
	playerbot/ai/LootManager.cpp \
	playerbot/ai/LootManager.h \
	playerbot/ai/LootObjectStack.cpp \
	playerbot/ai/LootObjectStack.h \
	playerbot/strategy/ActionBasket.cpp \
	playerbot/strategy/ActionBasket.h \
	playerbot/strategy/Action.cpp \
	playerbot/strategy/ActionFactory.cpp \
	playerbot/strategy/ActionFactory.h \
	playerbot/strategy/Action.h \
	playerbot/strategy/ChooseTargetActions.h \
	playerbot/strategy/CureTriggers.cpp \
	playerbot/strategy/CureTriggers.h \
	playerbot/strategy/Engine.cpp \
	playerbot/strategy/Engine.h \
	playerbot/strategy/GenericActions.cpp \
	playerbot/strategy/GenericActions.h \
	playerbot/strategy/GenericNonCombatStrategy.cpp \
	playerbot/strategy/GenericNonCombatStrategy.h \
	playerbot/strategy/GenericSpellActions.cpp \
	playerbot/strategy/GenericSpellActions.h \
	playerbot/strategy/GenericTriggers.cpp \
	playerbot/strategy/GenericTriggers.h \
	playerbot/strategy/HealthTriggers.cpp \
	playerbot/strategy/HealthTriggers.h \
	playerbot/strategy/LowManaMultiplier.cpp \
	playerbot/strategy/LowManaMultiplier.h \
	playerbot/strategy/Makefile.am \
	playerbot/strategy/Multiplier.cpp \
	playerbot/strategy/Multiplier.h \
	playerbot/strategy/NonCombatActions.cpp \
	playerbot/strategy/NonCombatActions.h \
	playerbot/strategy/PassiveMultiplier.cpp \
	playerbot/strategy/PassiveMultiplier.h \
	playerbot/strategy/PullStrategy.cpp \
	playerbot/strategy/PullStrategy.h \
	playerbot/strategy/Queue.cpp \
	playerbot/strategy/Queue.h \
	playerbot/strategy/RacialsStrategy.cpp \
	playerbot/strategy/RacialsStrategy.h \
	playerbot/strategy/RangeTriggers.h \
	playerbot/strategy/ReachTargetActions.h \
	playerbot/strategy/Strategy.cpp \
	playerbot/strategy/Strategy.h \
	playerbot/strategy/Trigger.cpp \
	playerbot/strategy/Trigger.h \
	playerbot/strategy/druid/BearTankDruidStrategy.cpp \
	playerbot/strategy/druid/BearTankDruidStrategy.h \
	playerbot/strategy/druid/CasterDruidStrategy.cpp \
	playerbot/strategy/druid/CasterDruidStrategy.h \
	playerbot/strategy/druid/CatDpsDruidStrategy.cpp \
	playerbot/strategy/druid/CatDpsDruidStrategy.h \
	playerbot/strategy/druid/DruidActionFactory.cpp \
	playerbot/strategy/druid/DruidActionFactory.h \
	playerbot/strategy/druid/DruidActions.cpp \
	playerbot/strategy/druid/DruidActions.h \
	playerbot/strategy/druid/DruidBearActions.h \
	playerbot/strategy/druid/DruidCatActions.h \
	playerbot/strategy/druid/DruidMultipliers.cpp \
	playerbot/strategy/druid/DruidMultipliers.h \
	playerbot/strategy/druid/DruidShapeshiftActions.h \
	playerbot/strategy/druid/DruidTriggers.cpp \
	playerbot/strategy/druid/DruidTriggers.h \
	playerbot/strategy/druid/FeralDruidStrategy.cpp \
	playerbot/strategy/druid/FeralDruidStrategy.h \
	playerbot/strategy/druid/GenericDruidNonCombatStrategy.cpp \
	playerbot/strategy/druid/GenericDruidNonCombatStrategy.h \
	playerbot/strategy/druid/GenericDruidStrategy.cpp \
	playerbot/strategy/druid/GenericDruidStrategy.h \
	playerbot/strategy/hunter/DpsHunterStrategy.cpp \
	playerbot/strategy/hunter/DpsHunterStrategy.h \
	playerbot/strategy/hunter/GenericHunterNonCombatStrategy.cpp \
	playerbot/strategy/hunter/GenericHunterNonCombatStrategy.h \
	playerbot/strategy/hunter/GenericHunterStrategy.cpp \
	playerbot/strategy/hunter/GenericHunterStrategy.h \
	playerbot/strategy/hunter/HunterActionFactory.cpp \
	playerbot/strategy/hunter/HunterActionFactory.h \
	playerbot/strategy/hunter/HunterActions.cpp \
	playerbot/strategy/hunter/HunterActions.h \
	playerbot/strategy/hunter/HunterMultipliers.cpp \
	playerbot/strategy/hunter/HunterMultipliers.h \
	playerbot/strategy/hunter/HunterTriggers.cpp \
	playerbot/strategy/hunter/HunterTriggers.h \
	playerbot/strategy/mage/FireMageStrategy.cpp \
	playerbot/strategy/mage/FireMageStrategy.h \
	playerbot/strategy/mage/FrostMageStrategy.cpp \
	playerbot/strategy/mage/FrostMageStrategy.h \
	playerbot/strategy/mage/GenericMageNonCombatStrategy.cpp \
	playerbot/strategy/mage/GenericMageNonCombatStrategy.h \
	playerbot/strategy/mage/GenericMageStrategy.cpp \
	playerbot/strategy/mage/GenericMageStrategy.h \
	playerbot/strategy/mage/MageActionFactory.cpp \
	playerbot/strategy/mage/MageActionFactory.h \
	playerbot/strategy/mage/MageActions.cpp \
	playerbot/strategy/mage/MageActions.h \
	playerbot/strategy/mage/MageMultipliers.cpp \
	playerbot/strategy/mage/MageMultipliers.h \
	playerbot/strategy/mage/MageTriggers.cpp \
	playerbot/strategy/mage/MageTriggers.h \
	playerbot/strategy/paladin/DpsPaladinStrategy.cpp \
	playerbot/strategy/paladin/DpsPaladinStrategy.h \
	playerbot/strategy/paladin/GenericPaladinNonCombatStrategy.cpp \
	playerbot/strategy/paladin/GenericPaladinNonCombatStrategy.h \
	playerbot/strategy/paladin/GenericPaladinStrategy.cpp \
	playerbot/strategy/paladin/GenericPaladinStrategy.h \
	playerbot/strategy/paladin/PaladinActionFactory.cpp \
	playerbot/strategy/paladin/PaladinActionFactory.h \
	playerbot/strategy/paladin/PaladinActions.cpp \
	playerbot/strategy/paladin/PaladinActions.h \
	playerbot/strategy/paladin/PaladinMultipliers.cpp \
	playerbot/strategy/paladin/PaladinMultipliers.h \
	playerbot/strategy/paladin/PaladinTriggers.cpp \
	playerbot/strategy/paladin/PaladinTriggers.h \
	playerbot/strategy/paladin/TankPaladinStrategy.cpp \
	playerbot/strategy/paladin/TankPaladinStrategy.h \
	playerbot/strategy/priest/DpsPriestStrategy.cpp \
	playerbot/strategy/priest/DpsPriestStrategy.h \
	playerbot/strategy/priest/GenericPriestStrategy.cpp \
	playerbot/strategy/priest/GenericPriestStrategy.h \
	playerbot/strategy/priest/HealPriestNonCombatStrategy.cpp \
	playerbot/strategy/priest/HealPriestNonCombatStrategy.h \
	playerbot/strategy/priest/HealPriestStrategy.cpp \
	playerbot/strategy/priest/HealPriestStrategy.h \
	playerbot/strategy/priest/PriestActionFactory.cpp \
	playerbot/strategy/priest/PriestActionFactory.h \
	playerbot/strategy/priest/PriestActions.cpp \
	playerbot/strategy/priest/PriestActions.h \
	playerbot/strategy/priest/PriestMultipliers.cpp \
	playerbot/strategy/priest/PriestMultipliers.h \
	playerbot/strategy/priest/PriestTriggers.cpp \
	playerbot/strategy/priest/PriestTriggers.h \
	playerbot/strategy/rogue/DpsRogueStrategy.cpp \
	playerbot/strategy/rogue/DpsRogueStrategy.h \
	playerbot/strategy/rogue/GenericRogueNonCombatStrategy.cpp \
	playerbot/strategy/rogue/GenericRogueNonCombatStrategy.h \
	playerbot/strategy/rogue/RogueActionFactory.cpp \
	playerbot/strategy/rogue/RogueActionFactory.h \
	playerbot/strategy/rogue/RogueActions.cpp \
	playerbot/strategy/rogue/RogueActions.h \
	playerbot/strategy/rogue/RogueComboActions.h \
	playerbot/strategy/rogue/RogueFinishingActions.h \
	playerbot/strategy/rogue/RogueMultipliers.cpp \
	playerbot/strategy/rogue/RogueMultipliers.h \
	playerbot/strategy/rogue/RogueOpeningActions.h \
	playerbot/strategy/rogue/RogueTriggers.cpp \
	playerbot/strategy/rogue/RogueTriggers.h \
	playerbot/strategy/shaman/GenericShamanStrategy.cpp \
	playerbot/strategy/shaman/GenericShamanStrategy.h \
	playerbot/strategy/shaman/HealShamanStrategy.cpp \
	playerbot/strategy/shaman/HealShamanStrategy.h \
	playerbot/strategy/shaman/ShamanActionFactory.cpp \
	playerbot/strategy/shaman/ShamanActionFactory.h \
	playerbot/strategy/shaman/ShamanActions.cpp \
	playerbot/strategy/shaman/ShamanActions.h \
	playerbot/strategy/shaman/ShamanMultipliers.cpp \
	playerbot/strategy/shaman/ShamanMultipliers.h \
	playerbot/strategy/shaman/ShamanNonCombatStrategy.cpp \
	playerbot/strategy/shaman/ShamanNonCombatStrategy.h \
	playerbot/strategy/shaman/ShamanTriggers.cpp \
	playerbot/strategy/shaman/ShamanTriggers.h \
	playerbot/strategy/warlock/DpsWarlockStrategy.cpp \
	playerbot/strategy/warlock/DpsWarlockStrategy.h \
	playerbot/strategy/warlock/GenericWarlockNonCombatStrategy.cpp \
	playerbot/strategy/warlock/GenericWarlockNonCombatStrategy.h \
	playerbot/strategy/warlock/GenericWarlockStrategy.cpp \
	playerbot/strategy/warlock/GenericWarlockStrategy.h \
	playerbot/strategy/warlock/TankWarlockStrategy.cpp \
	playerbot/strategy/warlock/TankWarlockStrategy.h \
	playerbot/strategy/warlock/WarlockActionFactory.cpp \
	playerbot/strategy/warlock/WarlockActionFactory.h \
	playerbot/strategy/warlock/WarlockActions.cpp \
	playerbot/strategy/warlock/WarlockActions.h \
	playerbot/strategy/warlock/WarlockMultipliers.cpp \
	playerbot/strategy/warlock/WarlockMultipliers.h \
	playerbot/strategy/warlock/WarlockTriggers.cpp \
	playerbot/strategy/warlock/WarlockTriggers.h \
	playerbot/strategy/warrior/DpsWarriorStrategy.cpp \
	playerbot/strategy/warrior/DpsWarriorStrategy.h \
	playerbot/strategy/warrior/GenericWarriorNonCombatStrategy.cpp \
	playerbot/strategy/warrior/GenericWarriorNonCombatStrategy.h \
	playerbot/strategy/warrior/GenericWarriorStrategy.cpp \
	playerbot/strategy/warrior/GenericWarriorStrategy.h \
	playerbot/strategy/warrior/TankWarriorStrategy.cpp \
	playerbot/strategy/warrior/TankWarriorStrategy.h \
	playerbot/strategy/warrior/WarriorActionFactory.cpp \
	playerbot/strategy/warrior/WarriorActionFactory.h \
	playerbot/strategy/warrior/WarriorActions.cpp \
	playerbot/strategy/warrior/WarriorActions.h \
	playerbot/strategy/warrior/WarriorMultipliers.cpp \
	playerbot/strategy/warrior/WarriorMultipliers.h \
	playerbot/strategy/warrior/WarriorTriggers.cpp \
	playerbot/strategy/warrior/WarriorTriggers.h

## Additional files to include when running 'make dist'
#  Precompiled Headers for WIN
EXTRA_DIST = \
	pchdef.cpp \
	pchdef.h
